--- a/admin-panel.html
+++ b/admin-panel.html
@@ -204,8 +204,21 @@
                 </div>
             </div>
         </div>
-    <!-- Optional runtime env overrides (copy env.example.js -> env.local.js) -->
-    <script src="env.local.js"></script>
+        <!-- Optional runtime env overrides (copy env.example.js -> env.local.js)
+                 Only load on localhost to avoid 404/MIME errors in production. -->
+        <script>
+            (function(){
+                try {
+                    var h = location.hostname;
+                    var isLocal = h === 'localhost' || h === '127.0.0.1' || /\.local$/i.test(h);
+                    if (!isLocal) return;
+                    var s = document.createElement('script');
+                    s.src = 'env.local.js';
+                    s.defer = true;
+                    document.head.appendChild(s);
+                } catch(e) { /* no-op */ }
+            })();
+        </script>
     <script type="module" src="products-panel.js"></script>
     <script type="module" src="hizmet-ve-urunler-panel.js"></script>
     <script type="module" src="dashboard-panel.js"></script>
