Invoices v2: make v2 the default route, ensure 'name' column exists, add client fallback when schema cache misses 'name'

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -81,7 +81,7 @@
                         <div class="accordion-body p-0">
                             <nav class="nav flex-column nav-pills gap-1 p-2">
                                 <a class="nav-link" href="#offers">Teklifler</a>
-                                <a class="nav-link" href="#invoices">Faturalar</a>
+                                <a class="nav-link" href="#invoices-v2">Faturalar</a>
                                 <a class="nav-link" href="#customers">Müşteriler</a>
                                 <a class="nav-link" href="#sales-report">Satışlar Raporu</a>
                                 <a class="nav-link" href="#collections-report">Tahsilatlar Raporu</a>
