deploy: v2 reports migration + dynamic titles; owner RLS for products/customers; price lists isolation + UI; contact flow and footer polish

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yönetim Paneli | aksa yazılım</title>
+    <title>Genel Bakış</title>
     <link rel="stylesheet" href="admin-panel.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -18,6 +18,8 @@
             <i class="bi bi-list"></i><span class="d-none d-md-inline">Menü</span>
         </button>
     </div>
+
+    
 
   <div class="topbar-right ms-auto" role="group" aria-label="Kullanıcı işlemleri"
        style="display: flex; align-items: center; gap: 0.5rem;">
@@ -46,9 +48,7 @@
     <aside class="admin-sidebar" id="sidebar">
             <div class="admin-logo mb-4">
                 <div class="brand-stack">
-                    <div class="brand-line">
-                        <span class="fw-bold brand-name">aksa yazılım</span>
-                    </div>
+                    <div class="brand-name">Eylül Soft</div>
                     <div class="panel-title">Yönetim Paneli</div>
                 </div>
             </div>
