--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKSA YAZILIM | Yönetici Girişi</title>
+    <title>Yönetici Girişi</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -108,7 +108,9 @@
     <div class="auth-right">
         <section class="auth-hero">
             <div class="auth-hero-inner">
-                <div class="eleks-logo">AKSA YAZILIM<span class="dot">.</span></div>
+                                                <div class="eleks-logo" style="display:flex;align-items:center;gap:10px;justify-content:center;">
+                                                      <img src="assets/softlogo-text.svg" alt="Logo" class="brand-logo-img brand-logo--auth" style="height:44px;width:auto;object-fit:contain;"/>
+                                                </div>
                 <h1 class="auth-brand">Ön Muhasebe Platformu</h1>
                                 <p class="auth-tagline">Tekliften faturaya, cariden tahsilata. İşletmenizin finans akışını güvenle yönetin.</p>
                 <div class="auth-points">
