--- a/iletisim.html
+++ b/iletisim.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>İletişim | Aksa Yazılım</title>
+  <title>İletişim</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="main-header eleks-header">
     <div class="container nav-container">
       <div class="logo eleks-logo">
-        <a href="index.html" style="text-decoration:none;color:inherit;"><span>aksa yazılım<span class="dot">.</span></span></a>
+        <a href="index.html" style="text-decoration:none;color:inherit;display:inline-flex;align-items:center;gap:8px;">
+          <img src="assets/softlogo-text.svg" alt="Logo" class="brand-logo-img" style="height:40px;width:auto;object-fit:contain;"/>
+        </a>
       </div>
       <nav>
         <ul>
@@ -37,7 +39,7 @@
   </div>
   <footer class="eleks-footer">
     <div class="container">
-      <p>&copy; 2025 Aksa Yazılım. Tüm hakları saklıdır.</p>
+  <p>&copy; 2025 Tüm hakları saklıdır.</p>
     </div>
   </footer>
 </body>
