--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Üyelik | AKSA YAZILIM</title>
+  <title>Üyelik</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -48,9 +48,11 @@
     <div class="auth-right">
       <section class="auth-hero">
         <div class="auth-hero-inner">
-          <div class="eleks-logo">AKSA YAZILIM<span class="dot">.</span></div>
+          <div class="eleks-logo" style="display:flex;align-items:center;gap:10px;justify-content:center;">
+            <img src="assets/softlogo-text.svg" alt="Logo" class="brand-logo-img brand-logo--auth" style="height:44px;width:auto;object-fit:contain;"/>
+          </div>
           <h1 class="auth-brand">Ön Muhasebe Platformu</h1>
-          <p class="auth-tagline">Ücretsiz başlayın, işinizi büyütün. Güvenli ve hızlı alt yapı.</p>
+                            <p class="auth-tagline">Ücretsiz başlayın, işinizi büyütün. Güvenli ve hızlı alt yapı.</p>
           <div class="auth-points">
             <div class="auth-point"><i class="bi bi-shield-check"></i> KVKK uyumlu</div>
             <div class="auth-point"><i class="bi bi-speedometer"></i> Hızlı arayüz</div>
