--- a/user-home.html
+++ b/user-home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kullanıcı Anasayfa | AKSA YAZILIM</title>
+  <title>Kullanıcı Anasayfa</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -18,8 +18,11 @@
 </head>
 <body>
   <section class="card">
-    <div class="eleks-logo">AKSA YAZILIM<span class="dot">.</span></div>
-    <h1 style="margin:6px 0 2px 0;">Hoş geldiniz</h1>
+    <div style="text-align:center; margin-bottom:8px;">
+      <div style="font-size:2rem; font-weight:900; letter-spacing:-0.5px; color:#f84343;">Eylül Soft</div>
+      <div style="font-size:1.2rem; font-weight:700; color:#f59e0b;">Dashboard</div>
+    </div>
+  <h1 style="margin:6px 0 2px 0;">Hoş geldiniz</h1>
     <p id="welcomeLine" class="muted">Kullanıcı bilgileriniz yükleniyor...</p>
 
     <div class="actions" style="margin-top:12px;">
