--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AKSA YAZILIM | Ön Muhasebe</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- Use local bootstrap to avoid CDN fetch issues in production -->
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="brand-bg">
@@ -255,5 +257,7 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 })();
 </script>
+<!-- Local Bootstrap bundle (deferred) -->
+<script src="assets/vendor/bootstrap/bootstrap.bundle.min.js" defer></script>
 <!-- Footer görsel yükleme kaldırıldı -->
 </html>
