--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKSA YAZILIM | Ön Muhasebe</title>
+    <title>Eylül Soft | Ön Muhasebe</title>
+    <link rel="icon" type="image/svg+xml" href="assets/softfavicon.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Use local bootstrap to avoid CDN fetch issues in production -->
     <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
@@ -13,7 +14,7 @@
         <header class="main-header eleks-header">
     <div class="container nav-container">
             <div class="logo">
-                <img src="assets/softlogo.svg" alt="Logo" class="brand-logo-img">
+                <img src="assets/softlogo-text.svg" alt="Eylül Soft" class="brand-logo-img brand-logo--header" style="height:88px;width:auto;object-fit:contain;">
             </div>
             <button id="mobileNavToggle" class="mobile-nav-toggle" aria-label="Menüyü Aç/Kapat" title="Menü">
                 <i class="bi bi-list"></i>
@@ -40,7 +41,7 @@
         <section id="hero" class="landing-hero">
             <div class="container hero-container">
                 <div class="hero-text">
-                    <h1>AKSA YAZILIM Ön Muhasebe</h1>
+                    <h1>Eylül Soft Ön Muhasebe</h1>
                     <p>Tekliften faturaya, cariden tahsilata, stoktan rapora<br/>işinizin tüm finans akışını tek yerden yönetin.</p>
                     <div class="hero-ctas">
                         <a href="login.html" class="eleks-btn">Ücretsiz Dene</a>
@@ -218,7 +219,7 @@
                 <span class="footer-policy-sep">|</span>
                 <a href="gizlilik.html" class="footer-policy-link">Gizlilik</a>
             </div>
-            <p style="margin-top:12px;">&copy; 2025 Aksa Yazılım. Tüm hakları saklıdır.</p>
+            <p style="margin-top:12px;">&copy; 2025 Eylül Soft. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 <div id="cookieNotice" style="display:none;position:fixed;bottom:24px;left:50%;transform:translateX(-50%);background:#fff;border-radius:16px;box-shadow:0 4px 24px rgba(0,0,0,0.13);padding:24px 32px;z-index:3000;max-width:420px;width:96%;text-align:center;font-size:1.08rem;">
