style(brand): reduce landing header logo size and move sizing to CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="main-header eleks-header">
     <div class="container nav-container">
             <div class="logo">
-                <img src="assets/softlogo-text.svg" alt="Eylül Soft" class="brand-logo-img brand-logo--header" style="height:88px;width:auto;object-fit:contain;">
+                <img src="assets/softlogo-text.svg" alt="Eylül Soft" class="brand-logo-img brand-logo--header" />
             </div>
             <button id="mobileNavToggle" class="mobile-nav-toggle" aria-label="Menüyü Aç/Kapat" title="Menü">
                 <i class="bi bi-list"></i>
