chore(seo): add google-site-verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="zmnPX1JCGBgythOnzpA2uOmmUWFNjZC1vMB-sGjX_10">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eylül Soft | Ön Muhasebe</title>
     <link rel="icon" type="image/svg+xml" href="assets/softfavicon.svg">
@@ -219,7 +220,7 @@
                 <span class="footer-policy-sep">|</span>
                 <a href="gizlilik.html" class="footer-policy-link">Gizlilik</a>
             </div>
-            <p style="margin-top:12px;">&copy; 2025 Eylül Soft. Tüm hakları saklıdır.</p>
+            
         </div>
     </footer>
 <div id="cookieNotice" style="display:none;position:fixed;bottom:24px;left:50%;transform:translateX(-50%);background:#fff;border-radius:16px;box-shadow:0 4px 24px rgba(0,0,0,0.13);padding:24px 32px;z-index:3000;max-width:420px;width:96%;text-align:center;font-size:1.08rem;">
